# test_oop

./: .gitignore  README.md  pyproject.toml
src/: main.py  test.py
src/nightclub/: club.py  dance.py  people.py
src/tests/: club_test.py  customizer.py  dance_test.py  people_test.py
